<resources>
    <string name="app_name">VargaNorbert_Mobil_Rest_Varosok</string>
    <string name="list_z_s">Listázás</string>
    <string name="j_felv_tel">Új felvétel</string>
    <string name="n_v">Név</string>
    <string name="orsz_g">Ország</string>
    <string name="lakoss_g">Lakosság</string>
    <string name="felv_tel">Felvétel</string>
    <string name="vissza">Vissza</string>
</resources>