<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/addnev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n_v"
        android:inputType="text" />

    <EditText
        android:id="@+id/addorszag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/orsz_g"
        android:inputType="text" />

    <EditText
        android:id="@+id/addlakossag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lakoss_g"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/felv_tel" />

    <Button
        android:id="@+id/buttonback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vissza" />

</LinearLayout>